# Dr-Claude-Code

./: DrCC_v7_cc.md  RACA_v7_cc.md  README.md  install.sh  uninstall.sh  update.sh
.claude/: CLAUDE.md  codemap.md  settings.local.json
.claude/agents/: data-validator.md  red-team-reviewer.md
.claude/commands/: experiment-preflight.md  harvest-and-report.md  sync-dashboard.md
.claude/commands/drcc/: dashboard-sync.md  find-compute.md  onboarding.md
.claude/commands/raca/: dashboard-sync.md  experiment-preflight.md  harvest-and-report.md  onboarding.md  (+1 more)
.claude/hooks/: git-push-safety.sh  python-lint.sh
.claude/references/: experiments.md  huggingface-datasets.md  workspace.md
.claude/rules/: experiments.md  git-safety.md  huggingface-datasets.md  huggingface.md  python-patterns.md  security.md  workspace.md
dev/: cleanup-test.sh
docs/: adding-a-cluster.md  adding-a-visualizer.md  architecture.md  experiment-lifecycle.md  faq.md  improvements-from-feynman.md
docs/blog/: RELEASE.md
templates/sbatch/: training.sbatch.j2
tools/: setup-agent-deck.sh
tools/cli/: pyproject.toml
tools/cli/dcc/: __init__.py  auth.py  cli.py  cluster.py  config.py  controlmaster.py  download.py  forward.py  ssh.py  upload.py
tools/cli/raca/: __init__.py  auth.py  cli.py  cluster.py  config.py  controlmaster.py  disconnect.py  download.py  forward.py  persistent.py  setup_cluster.py  ssh.py  upload.py
tools/cli/raca/tests/: test_cli_guards.py  test_config.py  test_controlmaster_dispatch.py
tools/visualizer/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
(+41 files in other folders)
