[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dcc"
version = "0.1.0"
description = "Dr Claude Code — SSH lifecycle for research clusters"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
dcc = "dcc.cli:main"
